# SmartCheck

./: .gitignore  .gitmodules  LICENSE  Makefile  README  README.md  SmartCheck.cabal  TODO  TODO.md  smartcheck.cabal
examples/: .gitignore  Comp.hs  Div0.hs  Heap_Program.hs  Lambda.hs  LambdaCalc.hs  Large.hs  MutualRecData.hs  NewType.hs  Protocol.hs  Tests.hs
examples/Paper/: Paper.hs
examples/RedBlackTrees/: README  RedBlackSet.hs  RedBlackSetTest.hs  RedBlackTrees.cabal
paper/: .gitignore  Makefile  Paper.hs  paper.bib  paper.tex  sigplanconf.cls
paper/Example/: .gitignore  InitEx.hs  InitEx2.hs  Makefile  gnuplot-notes.txt  script.gnp
paper/talk/: notes.txt
paper/talk/smartcheck-pike.key/Metadata/: DocumentIdentifier  Properties.plist
qc-tests/: Tests.hs
refs/: README.txt  quickcheck-notes.md
regression/: .gitignore  Config.mk  LICENSE  Makefile  PaperExample1.hs  README.md  Test.hs  script.gnp
regression/Degenerate/: Degenerate.hs  Makefile
regression/Div0/: Div0.hs  Makefile
regression/Heap/: Heap_Program.hs  Makefile
regression/List/: List.hs  Makefile
regression/PaperExample1/: Makefile  PaperExample1.hs  script.gnp
regression/Parser/: Makefile  Parser.hs
src/Test/: SmartCheck.hs
src/Test/SmartCheck/: Args.hs  Common.hs  ConstructorGen.hs  DataToTree.hs  Extrapolate.hs  Generalize.hs  LICENSE  Matches.hs  Property.hs  Reduce.hs  Render.hs  SmartGen.hs  Test.hs  Types.hs
tests/: Tests.hs
