Name:                SmartCheck
Version:             0.1
Synopsis:            A smarter QuickCheck.
License:             BSD3
License-file:        LICENSE
Author:              Lee Pike
Maintainer:          leepike@gmail.com
Copyright:           copyright, Lee Pike 2012.
Category:            Testing
Build-type:          Simple
Extra-source-files:  

Cabal-version:       >=1.2

Library
  Exposed-modules:   SmartCheck,
                     SmartCheck.ChildReplace,
                     SmartCheck.Extrapolate,
                     SmartCheck.TypeBi

-- BinaryTrees, Protocol, Tests, Div0, BinarySearch, Rev, SmartCheck.Extrapolate, SmartCheck.TypeBi, SmartCheck.SmartCheck, SmartCheck.ChildReplace
  
  Build-depends:     base >= 4.0,
                     QuickCheck >= 2.4.2,
                     mtl >= 2.0.1.0,
                     random >= 1.0.1.1,
                     uniplate >= 1.6.6

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fwarn-tabs
    -auto-all
    -caf-all
    -fno-warn-orphans

    --enable-library-profiling

  
  -- Other-modules:       
  
  -- Build-tools:         
  
