Name:                smartcheck
Version:             0.1
Synopsis:            A smarter QuickCheck.
Homepage:            https://github.com/leepike/SmartCheck
Description:         See the README.md.
License:             BSD3
License-file:        LICENSE.md
Author:              Lee Pike
Maintainer:          leepike@gmail.com
Copyright:           copyright, Lee Pike 2012.
Category:            Testing
Build-type:          Simple
Extra-source-files:

Cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/leepike/SmartCheck.git

Library
  Exposed-modules:   Test.SmartCheck,
                     Test.SmartCheck.Args,
                     Test.SmartCheck.ConstructorGen,
                     Test.SmartCheck.DataToTree,
                     Test.SmartCheck.Extrapolate,
                     Test.SmartCheck.Matches,
                     Test.SmartCheck.Property,
                     Test.SmartCheck.Reduce,
                     Test.SmartCheck.Render,
                     Test.SmartCheck.SmartGen,
                     Test.SmartCheck.Test,
                     Test.SmartCheck.Types

  Build-depends:     base >= 4.0 && < 5,
                     QuickCheck >= 2.7,
                     mtl,
                     random >= 1.0.1.1,
                     containers >= 0.4,
                     generic-deriving >= 1.2.1,
                     ghc-prim

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fwarn-tabs
    -auto-all
    -caf-all
    -fno-warn-orphans

executable sc-regression
  Main-is:           Tests.hs
  Other-modules:     Div0,
                     MutualRecData,
                     Heap_Program,
                     LambdaCalc
  Hs-source-dirs:    examples
  Build-depends:     base >= 4.0 && < 5,
                     smartcheck,
                     QuickCheck >= 2.7,
                     mtl,
                     random >= 1.0.1.1,
                     containers >= 0.4,
                     generic-deriving >= 1.2.1,
                     ghc-prim
  Default-language:  Haskell2010
  Ghc-options:       -Wall
