Name:                smartcheck
Version:             0.2.2
Synopsis:            A smarter QuickCheck.
Homepage:            https://github.com/leepike/SmartCheck
Description:         See the README.md.
License:             BSD3
License-file:        LICENSE.md
Author:              Lee Pike
Maintainer:          leepike@gmail.com
Copyright:           copyright, Lee Pike 2012.
Category:            Testing
Build-type:          Simple
Extra-source-files:

Cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/leepike/SmartCheck.git

flag regression-flag
  default:              False
  description:          add libraries for regression testing

Library
  Exposed-modules:   Test.SmartCheck,
                     Test.SmartCheck.Args,
                     Test.SmartCheck.ConstructorGen,
                     Test.SmartCheck.DataToTree,
                     Test.SmartCheck.Extrapolate,
                     Test.SmartCheck.Matches,
                     Test.SmartCheck.Reduce,
                     Test.SmartCheck.Render,
                     Test.SmartCheck.SmartGen,
                     Test.SmartCheck.Test,
                     Test.SmartCheck.Types

  if flag(regression-flag)
    Build-depends:     base >= 4.0 && < 5,
                       QuickCheck >= 2.8,
                       mtl,
                       random >= 1.0.1.1,
                       containers >= 0.4,
                       generic-deriving >= 1.2.1,
                       ghc-prim,
                       testing-feat,
                       lazysmallcheck
  else
    Build-depends:     base >= 4.0 && < 5,
                       QuickCheck >= 2.8,
                       mtl,
                       random >= 1.0.1.1,
                       containers >= 0.4,
                       generic-deriving >= 1.2.1,
                       ghc-prim

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fwarn-tabs
    -auto-all
    -caf-all
    -fno-warn-orphans

-- QuickCheck some basic properties about SmartCheck.
executable sc-qc
  Hs-source-dirs:    qc-tests
  Main-is:           Tests.hs
  Build-depends:     base >= 4.0 && < 5,
                     smartcheck >= 0.2,
                     QuickCheck >= 2.8,
                     mtl,
                     random >= 1.0.1.1,
                     containers >= 0.4,
                     generic-deriving >= 1.2.1,
                     ghc-prim
  Default-language:  Haskell2010
  Ghc-options:       -Wall
